:lipstick: Fixing CSS Bugs part 3
- Added custom scrollbars (and fixed scrollbar bugs)
- Made Resume submission optional
- Fixed Finish Screen error with icon going off the screen

--- a/src/components/register/form/screens/styles.module.scss
+++ b/src/components/register/form/screens/styles.module.scss
@@ -37,7 +37,7 @@
     }
   }
   
-  .text {
+  .text, .textOp {
     font-size: 1.25em;
     line-height: 1.5em;
     margin-top: 25px;
@@ -62,6 +62,9 @@
     margin-left: 4px
   }
 }
+
+
+
 
 .welcome {
   margin-bottom: 10px;
@@ -233,28 +236,28 @@
 
 }
 
-.personalInfoP2 {
-  // using !important to override react-custom-scrollbars
-  // overflow: visible !important;
-  // .scrollbox {
-  //   overflow: visible !important;
-  // }
-  // .horizontalScrollbar {
-  //   display: none;
-  // }
-  // @include registration-floating-screen {
-    overflow: auto !important;
-    .scrollbox {
-      overflow-y: scroll !important;
-    }
-  // }
+// .personalInfoP2 {
+//   // using !important to override react-custom-scrollbars
+//   // overflow: visible !important;
+//   // .scrollbox {
+//   //   overflow: visible !important;
+//   // }
+//   // .horizontalScrollbar {
+//   //   display: none;
+//   // }
+//   // @include registration-floating-screen {
+//     overflow: hidden !important;
+//     .scrollbox {
+//       overflow-y: hidden !important;
+//     }
+//   // }
 
-  .title {
-    margin-bottom: 20px;
-    color: #F6F4D4;
-  }
+//   .title {
+//     margin-bottom: 20px;
+//     color: #F6F4D4;
+//   }
 
-}
+// }
 
 .eventQuestions::-webkit-scrollbar {
   display: none; // Safari and Chrome
@@ -314,7 +317,7 @@
 .finish {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
   box-sizing: border-box;
   overflow: scroll;
 
@@ -324,7 +327,9 @@
 
   .logo {
     display: block;
+    position: static;
     height: 50%;
+    // top: 10vh;
 
     img {
       height: 100%;
@@ -337,7 +342,7 @@
     color: #F99557;
     width: 100%;
     text-align: center;
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 700;
   }
 
