--- a/src/components/register/form/styles.module.scss
+++ b/src/components/register/form/styles.module.scss
@@ -1,7 +1,7 @@
 @import 'common.scss';
 
 .container {
-  overflow: scroll !important;
+  overflow: hidden !important;
   flex: 1;
   position: relative;
   background-size: auto 100%;
@@ -50,8 +50,7 @@
   // }
 
   .form {
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: visible;
     position: absolute;
     z-index: 2;
     height: 50%;
@@ -91,26 +90,33 @@
     //   width: 90%;
     //   left: 50%;
     // }
+    ::-webkit-scrollbar {
+      width: 7px;
+      height: 100%;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+      border-radius: 10px;
+    }
+     
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      background: white; 
+      border-radius: 10px;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background: #FEA3AA; 
+    }
 
-    ::-webkit-scrollbar:vertical {
-      width: 11px;
-  }
-  
-  ::-webkit-scrollbar:horizontal {
-      height: 11px;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    border: 2px solid white; /* should match background, can't be transparent */
-    background-color: rgba(0, 0, 0, .5);
-}
 
     .screenContainer {
       height: 100%;
       display: none;
       flex-direction: column;
-      overflow-y: scroll;
+      overflow: auto;
       // overflow-x: visible;
 
       &.visible {
